--- a/Flutter_FinalProject-master/pubspec.yaml
+++ b/Flutter_FinalProject-master/pubspec.yaml
@@ -12,12 +12,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.24.2
+  flutter_rating_bar: ^4.0.1  
   cloud_firestore: ^4.13.6
   flutter_bloc: ^8.1.3
   firebase_auth: ^4.15.3
