--- a/Flutter_FinalProject-master/pubspec.yaml
+++ b/Flutter_FinalProject-master/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   dotted_dashed_line: ^0.0.3
   simple_circular_progress_bar: ^1.0.2
   animated_toggle_switch: ^0.6.2
+  readmore: ^2.1.0
+
 
 
 
